Fix contrast issue on paginiation.

--- a/public/assets/stylesheets/custom/scss/custom.scss
+++ b/public/assets/stylesheets/custom/scss/custom.scss
@@ -196,3 +196,10 @@ button.subject {
   display: flex;
   margin-bottom: 0.5em;
 }
+
+.pagination>.active>a, .pagination>.active>a:hover, .pagination>.active>a:focus, .pagination>.active>span, .pagination>.active>span:hover, .pagination>.active>span:focus {
+  background-color: $globe;
+  border-color: $globe;
+  color: $white !important;
+  font-weight: 700;
+}
